update inner links

--- a/docs/partial/multivariate.html
+++ b/docs/partial/multivariate.html
@@ -92,7 +92,7 @@ ul.task-list{list-style: none;}
     <ul class="list-unstyled mt-1">
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../index.html" class="sidebar-item-text sidebar-link">Welcome</a>
+  <a href="../index.html" class="sidebar-item-text sidebar-link">User Guide</a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -172,7 +172,7 @@ ul.task-list{list-style: none;}
   <li><a href="#pca" id="toc-pca" class="nav-link active" data-scroll-target="#pca"><span class="txbox_green">PCA</span></a>
   <ul class="collapse">
   <li><a href="#calculate" id="toc-calculate" class="nav-link" data-scroll-target="#calculate"><span class="txbox_gray">Calculate</span></a></li>
-  <li><a href="#plot-and-explore" id="toc-plot-and-explore" class="nav-link" data-scroll-target="#plot-and-explore"><span class="txbox_gray">Plot and Explore</span></a></li>
+  <li><a href="#explore-and-plot" id="toc-explore-and-plot" class="nav-link" data-scroll-target="#explore-and-plot"><span class="txbox_gray">Explore</span> and <span class="txbox_gray">Plot</span></a></li>
   </ul></li>
   </ul>
 </nav>
@@ -228,8 +228,8 @@ ul.task-list{list-style: none;}
 </div>
 </div>
 </section>
-<section id="plot-and-explore" class="level4">
-<h4 class="anchored" data-anchor-id="plot-and-explore"><span class="txbox_gray">Plot and Explore</span></h4>
+<section id="explore-and-plot" class="level4">
+<h4 class="anchored" data-anchor-id="explore-and-plot"><span class="txbox_gray">Explore</span> and <span class="txbox_gray">Plot</span></h4>
 <div class="columns">
 <div class="column">
 <section id="select-from-a-variety-of-plot-types." class="level5">
