update inner links

--- a/docs/partial/preprocess.html
+++ b/docs/partial/preprocess.html
@@ -174,7 +174,7 @@ ul.task-list{list-style: none;}
   <li><a href="#calculate" id="toc-calculate" class="nav-link" data-scroll-target="#calculate"><span class="txbox_gray">Calculate</span></a></li>
   <li><a href="#explore-and-plot" id="toc-explore-and-plot" class="nav-link" data-scroll-target="#explore-and-plot"><span class="txbox_gray">Explore</span> and <span class="txbox_gray">Plot</span></a></li>
   </ul></li>
-  <li><a href="#filter" id="toc-filter" class="nav-link" data-scroll-target="#filter"><span class="txbox_green">Filter</span></a>
+  <li><a href="#missing" id="toc-missing" class="nav-link" data-scroll-target="#missing"><span class="txbox_green">Missing</span></a>
   <ul class="collapse">
   <li><a href="#calculate-1" id="toc-calculate-1" class="nav-link" data-scroll-target="#calculate-1"><span class="txbox_gray">Calculate</span></a></li>
   <li><a href="#explore-and-plot-1" id="toc-explore-and-plot-1" class="nav-link" data-scroll-target="#explore-and-plot-1"><span class="txbox_gray">Explore</span> and <span class="txbox_gray">Plot</span></a></li>
@@ -265,8 +265,8 @@ ul.task-list{list-style: none;}
 </div>
 </section>
 </section>
-<section id="filter" class="level3">
-<h3 class="anchored" data-anchor-id="filter"><span class="txbox_green">Filter</span></h3>
+<section id="missing" class="level3">
+<h3 class="anchored" data-anchor-id="missing"><span class="txbox_green">Missing</span></h3>
 <section id="this-analysis-can-be-used-to-identify-and-remove-variables-with-missing-values.-specify-a-factor-group-of-interest-and-the-missing-cutoff-or-percent-acceptible-missing-for-each-level-in-the-group.-it-is-also-useful-to-remove-non-informative-varibles-or-those-with-a-standard-deviation-of-zero-using-the-remove-zero-variance-option." class="level5">
 <h5 class="anchored" data-anchor-id="this-analysis-can-be-used-to-identify-and-remove-variables-with-missing-values.-specify-a-factor-group-of-interest-and-the-missing-cutoff-or-percent-acceptible-missing-for-each-level-in-the-group.-it-is-also-useful-to-remove-non-informative-varibles-or-those-with-a-standard-deviation-of-zero-using-the-remove-zero-variance-option.">This analysis can be used to identify and remove variables with missing values. Specify a factor <code>group</code> of interest and the <code>missing cutoff</code> or percent acceptible missing for each level in the <code>group</code>. It is also useful to remove non-informative varibles or those with a standard deviation of zero using the <code>remove zero variance</code> option.</h5>
 </section>
