update inner links

--- a/docs/partial/data.html
+++ b/docs/partial/data.html
@@ -94,7 +94,7 @@ ul.task-list{list-style: none;}
     <ul class="list-unstyled mt-1">
         <li class="sidebar-item">
   <div class="sidebar-item-container"> 
-  <a href="../index.html" class="sidebar-item-text sidebar-link">Welcome</a>
+  <a href="../index.html" class="sidebar-item-text sidebar-link">User Guide</a>
   </div>
 </li>
         <li class="sidebar-item">
@@ -171,10 +171,7 @@ ul.task-list{list-style: none;}
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#reference" id="toc-reference" class="nav-link active" data-scroll-target="#reference">Reference</a>
-  <ul class="collapse">
-  <li><a href="#formatting" id="toc-formatting" class="nav-link" data-scroll-target="#formatting">Formatting</a></li>
-  </ul></li>
+  <li><a href="#formatting" id="toc-formatting" class="nav-link active" data-scroll-target="#formatting">Formatting</a></li>
   </ul>
 </nav>
     </div>
@@ -225,12 +222,6 @@ ul.task-list{list-style: none;}
 </section>
 <section id="next-use-the-preprocess-module-to-merge-the-two-data-set." class="level5">
 <h5 class="anchored" data-anchor-id="next-use-the-preprocess-module-to-merge-the-two-data-set.">Next use the <span class="txbox_green" style="background-color: #3dbc8b !important;">Preprocess</span> <span class="txbox_green" style="background-color: #3dbc8b !important;">module</span> to merge the two data set.</h5>
-</section>
-<section id="reference" class="level1">
-<h1>Reference</h1>
-<p><img src="img/dave.main/data_nav.png" class="bordered img-fluid"></p>
-<section id="this-module-is-used-to-overview-and-manage-data-and-metadata-objects.-to-get-started-format-your-data-into-two-parts-as-shown-below-and-then-follow-along-with-the-instructions-in-preprocess-merge-to-create-an-analysis-ready-data-object." class="level5">
-<h5 class="anchored" data-anchor-id="this-module-is-used-to-overview-and-manage-data-and-metadata-objects.-to-get-started-format-your-data-into-two-parts-as-shown-below-and-then-follow-along-with-the-instructions-in-preprocess-merge-to-create-an-analysis-ready-data-object.">This module is used to overview and manage data and metadata objects. To get started format your data into two parts as shown below and then follow along with the instructions in <span class="txbox_green" style="background-color: #3dbc8b !important;">Preprocess</span> &gt;&gt; <span class="txbox_green" style="background-color: #3dbc8b !important;">Merge</span> to create an analysis ready data object.</h5>
 </section>
 <section id="formatting" class="level3">
 <h3 class="anchored" data-anchor-id="formatting">Formatting</h3>
@@ -294,7 +285,6 @@ ul.task-list{list-style: none;}
 </div>
 
 
-</section>
 </section>
 
 </main> <!-- /main -->
